@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 25-04-2006 fixed: directory/file date of iso discs was not read
  - 25-04-2006 updated: Italian language file (Thnx to kotix)
  - 25-04-2006 updated: Chinese (Simple) language file (Thnx to gamepc)
  - 25-04-2006 fixed: subtitles could end up disabled even if they where enabled in dvd menu
